--- a/CiC/CiC.csproj
+++ b/CiC/CiC.csproj
@@ -20,6 +20,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -500,6 +501,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\Pages\CiC.MasterPage.js" />
     <Content Include="Scripts\plugins\fullcalendar.min.js" />
     <Content Include="Scripts\plugins\jquery.counterup.js" />
     <Content Include="Scripts\plugins\jquery.countTo.js" />
